# bayonne-base-windows

./: ProjectHome.md  releasebuild.bat
Bayone Run/config/: Makefile.in  caller.conf  connect.conf  dialed.conf  module.conf
Bayone Run/scripts/: server.pm
Bayone Run/server/: bayonne-soundcard.bat  de.x86  en.x86  fr.x86  ivrscript1.x86  ru.x86  tcp.x86
GNU Telephony/CAPE Framework/Debug/: CHARTD-1.7.lib  CapeCommon14.exp  CapeCommon14.lib  CapeExtras14.exp  FOXDLLD-1.7.exp  FOXDLLD-1.7.lib  audiotool.lib  ccaudio2.exp  ccrtp1.lib  ccscript3.exp  ccscript3.lib  g711.exp  g711.lib  gsm.exp  gsm.lib  odbc.exp  odbc.lib  osip2.lib  tonetool.lib
GNU Telephony/CAPE Framework/Import/: CapeExtras14.lib  ccaudio2.lib
bayonne2-2.0.2/: configure
bayonne2-2.0.2/audio/: convert
bayonne2-2.0.2/audio/en/: Makefile.in
bayonne2-2.0.2/audio/fr/: Makefile.in
bayonne2-2.0.2/audio/none/: Makefile.in
bayonne2-2.0.2/audio/ru/: Makefile.in
bayonne2-2.0.2/binders/: Makefile.am  Makefile.in
bayonne2-2.0.2/binders/ivrscript1/: Makefile.am  binder.cpp  checks.cpp  methods.cpp
bayonne2-2.0.2/config/: Makefile.am  bayonne.init  device.conf
bayonne2-2.0.2/docs/: Doxyfile
bayonne2-2.0.2/engine/: Makefile.am  Makefile.in  bayonne.cpp  posix.cpp  rpc.cpp  service.cpp  session.cpp  sysexec.cpp
bayonne2-2.0.2/scripts/: Makefile.am  server.py
bayonne2-2.0.2/server/: Makefile.in  methods.cpp  runtime.cpp  server.cpp  server.h
bayonne2-2.0.2/w32/: bayonne.sln  bayonne.sln.cache  en.vcproj  engine.vcproj  fr.vcproj  ivrscript1.vcproj  sip.vcproj
ccaudio2-0.9.5/: ChangeLog  Makefile.am  aclocal.m4  ccaudio2.list  ccaudio2.spec  configure  configure.ac
ccaudio2-0.9.5/codecs/: Makefile.in  g721.cpp
ccaudio2-0.9.5/doc/: Makefile.am
ccaudio2-0.9.5/gsm/: Makefile.am  Makefile.in  code.c  gsm.h  gsm_decode.c  gsm_destroy.c  gsm_encode.c  gsm_explode.c  gsm_implode.c  long_term.c  proto.h  table.c
ccaudio2-0.9.5/m4/: Makefile.am
ccaudio2-0.9.5/src/: audio2.h  audiobase.cpp  audiofile.cpp  detect.cpp  dialers.cpp  friends.cpp  stream.cpp  teltones.cpp
ccaudio2-0.9.5/utils/: audiotool.cpp  audiotool.h  chart.cpp  packetdump.cpp  strip.cpp  tonelist.cpp  tonetool.cpp  tonetool.h  tonewrite.cpp  trim.cpp
ccaudio2-0.9.5/w32/: UpgradeLog.XML  audiotool.vcproj  ccaudio2.dsp  ccaudio2.rc  ccaudio2.sln  ccaudio2.sln.cache  ccaudio2.vcproj  tonetool.vcproj
ccaudio2-0.9.5/w32/Debug/: tonetool.exp
ccaudio2-0.9.5/w32/Debug/ccaudio2/: BuildLog.htm
ccaudio2-0.9.5/w32/Debug/g711/: BuildLog.htm
ccaudio2-0.9.5/w32/Debug/gsm/: BuildLog.htm
ccaudio2-0.9.5/w32/Release/: audiotool.exp  g711.exp  g711.x86  tonetool.exp
ccaudio2-0.9.5/w32/Release/audiotool/: BuildLog.htm  mt.dep
ccaudio2-0.9.5/w32/Release/ccaudio2/: mt.dep  vc90.idb
ccaudio2-0.9.5/w32/Release/gsm/: BuildLog.htm
ccaudio2-0.9.5/w32/Release/tonetool/: mt.dep  vc90.idb
ccrtp-1.6.2/: ccrtp.list  configure
ccrtp-1.6.2/demo/: Makefile.in
ccrtp-1.6.2/m4/: Makefile.in
ccrtp-1.6.2/phone/: Makefile.in
ccrtp-1.6.2/src/: CryptoContext.cxx  Makefile.in  config.h.in
ccrtp-1.6.2/w32/: Makefile.in
ccscript3-0.8.0/: Makefile.in  ccscript3.list  ccscript3.spec  libccscript3.pc
ccscript3-0.8.0/modules/: Makefile.am  math.cpp
ccscript3-0.8.0/src/: image.cpp  interp.cpp  methods.cpp  runtime.cpp  script.cpp  script3.h  symbols.cpp
ccscript3-0.8.0/tests/: Makefile.am  Makefile.in  testscript.cpp
ccscript3-0.8.0/w32/: ccscript3.dsw  ccscript3.sln  odbcrll.dsp  odbcrll.vcproj  odbcrll.vcproj.7.10.old  sort.dsp  sort.vcproj.7.10.old  testscript.dsp  testscript.vcproj  time.dsp  time.vcproj
commoncpp2-1.6.3/: Makefile.in  config.h.in  configure  configure.ac
commoncpp2-1.6.3/demo/: Makefile.in  buffer.cpp  serialecho.cpp  tcpservice.cpp  tcpthread.cpp
commoncpp2-1.6.3/doc/: Makefile.in
commoncpp2-1.6.3/inc/: Makefile.am
commoncpp2-1.6.3/m4/: ost_string.m4
commoncpp2-1.6.3/src/: date.cpp  friends.cpp  keydata.cpp  map.cpp  md5.cpp  mime.cpp  serial.cpp  slog.cpp  strchar.cpp  timer.cpp  url.cpp
commoncpp2-1.6.3/tests/: Makefile.in  bug1.cpp  bug2.cpp
commoncpp2-1.6.3/w32/: Makefile.in  UpgradeLog.XML  ccext2.dsp  ccext2.vcproj  ccgnu2.dsp  ccgnu2.vcproj  common.sln.cache  debug.bat
exosip/demo/: demo.ncb
exosip/eXosip2/: eXosip2.def  eXosip2.dsw  eXosip2.ncb  eXosip2.opt  eXosip2.positions
exosip/lib/: eXosip2.lib  libexosip2.lib  libosipparser2.lib  osip2.lib
exosip/osip2/: osip2.dsw  osip2.ncb  osip2.opt  osip2.plg
exosip/osipparser2/: Makefile  osipparser2.dsw  osipparser2.opt  osipparser2.plg  osipparser2.positions
fox-1.7.18/adie/: icons.cpp
fox-1.7.18/calculator/: icons.h
fox-1.7.18/lib/: FOXDLLD-1.7.exp  FOXDLLD-1.7.lib
trunk/: Clean Debug.bat  Clean.bat  debugbuild.bat  编辑1.txt
trunk/bayonne2-2.0.2/: ChangeLog  Makefile.in  aclocal.m4  configure.ac
trunk/ccaudio2-0.9.5/: Makefile.in  README  ccaudio2.spec.in  libccaudio2.pc  private.h.in  reconfig
trunk/ccaudio2-0.9.5/codecs/: Makefile.am  codecs.h  g711.cpp  gsm.cpp  speex.cpp
trunk/ccrtp-1.6.2/: Makefile.in  aclocal.m4  ccrtp.spec  libccrtp1.pc
trunk/ccscript3-0.8.0/: ChangeLog  Makefile.am  TODO  ccscript3.spec.in  configure  configure.ac
trunk/ccscript3-0.8.0/modules/: Makefile.in  sort.cpp  time.cpp
trunk/ccscript3-0.8.0/optional/: Makefile.in
trunk/ccscript3-0.8.0/optional/odbc/: methods.cpp  module.h
trunk/ccscript3-0.8.0/src/: Makefile.in  private.h.in  property.cpp  ripple.cpp
trunk/ccscript3-0.8.0/tests/: testscript.bat
trunk/ccscript3-0.8.0/w32/: UpgradeLog.XML  ccscript3.dsp  ccscript3.sln.cache  ccscript3.sln.old  ccscript3.vcproj  ccscript3.vcproj.7.10.old  math.dsp  math.vcproj  math.vcproj.7.10.old  sort.vcproj  testscript.vcproj.7.10.old  time.vcproj.7.10.old
trunk/ccscript3-0.8.0/w32/Debug/ccscript3/: BuildLog.htm
trunk/ccscript3-0.8.0/w32/Debug/mathrll/: BuildLog.htm
trunk/ccscript3-0.8.0/w32/Debug/odbcrll/: BuildLog.htm
trunk/ccscript3-0.8.0/w32/Debug/sortrll/: BuildLog.htm
trunk/commoncpp2-1.6.3/: ChangeLog  Makefile.am  aclocal.m4  commoncpp2.list  commoncpp2.spec
trunk/db/: uuid
(+461 files in other folders)
